# document_forgery_detection

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  test.py
docs/: CLAUDE.md  FORGERY_METHODS.md  STAGE3_DESIGN.md  STAGE3_LONG_PDF_FALSE_POSITIVE.md  STAGE6_ADVISORY_READABILITY.md  STAGE6_DESIGN.md  STAGE6_UI_ADVISORY_FIXES.md  STAGE7_ADVISORY_READABILITY.md  STAGE7_DESIGN.md  STAGE7_UI_ADVISORY_FIXES.md  TODO.md
docs/plans/: multistage_localization_plan.md
scripts/: make_fixtures.py  make_font_fixtures.py  make_image_forensics_fixtures.py  make_invoice_fixtures.py  make_localization_fixtures.py
src/pdf_forgery/: __init__.py  cli.py  (+2 more)
tests/: conftest.py  test_acceptance_samples.py  test_aggregate.py  test_cli.py  test_core_types.py  test_detect.py  test_end_to_end.py  test_extract.py  test_font_detect.py  test_font_end_to_end.py  test_font_fonts.py  test_font_intra_token.py  test_font_localize.py  test_fusion.py  test_image_forensics.py  test_image_forensics_classical.py  test_image_forensics_detect.py  test_image_forensics_scoring.py  test_image_forensics_stage.py  test_invoice_end_to_end.py  test_invoice_localize.py  test_invoice_numbers.py  test_invoice_relationships.py  test_invoice_scoring.py  test_invoice_segmentation.py  test_locate.py  test_microsoft_pdf.py  test_new_stages_pipeline.py  test_objectdiff.py  test_objects_written.py  test_ocr_align.py  test_ocr_divergence.py  test_ocr_guards.py  test_ocr_integration.py  test_ocr_localize.py  test_ocr_normalize.py  test_ocr_routing.py  test_ocr_scoring.py  test_overlay.py  test_pipeline.py  (+8 more)
(+107 files in other folders)
